[MSS-985] mobile white space issue, client requirment fixed

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
@@ -98,8 +98,13 @@
             padding: rem(60) rem(30) rem(25);
         }
 
+        .product-tile, .product-tile-redesign {
+            height: 100%;
+        }
+
         .product-tile-redesign {
             margin: rem(20) 0 0;
+            margin-top: 0px;
         }
 
         > div {
